# vibe-blog

./: .coverage  .gitignore  CHANGELOG.md  README.md  README_EN.md  coverage.json  coverage.lcov  pyproject.toml  vercel.json
.github/: codecov.yml
.github/workflows/: build-frontend.yml  test-backend.yml  test-frontend.yml
backend/: .env.example  app.py  config.py  pytest.ini  requirements.txt
backend/infrastructure/prompts/: prompt_manager.py
backend/outputs/: Redis 快速上手实战指南_从安装到核心数据结构操作_20260105_221115.md  消息队列入门实战_从零搭建异步通信系统_20260105_223539.md
backend/routes/: __init__.py  blog_routes.py
backend/services/: book_scanner_service.py  database_service.py  file_parser_service.py  homepage_generator_service.py  knowledge_service.py  outline_expander_service.py  xhs_service.py
backend/services/blog_generator/: blog_service.py  image_enhancement.py  style_profile.py
backend/services/task_queue/: db.py
backend/static/: books.html  home.md  index.html
backend/tests/: test_68_01_architecture.py  test_68_01_governance.py  test_69_02_code2prompt.py  test_assembler_footnotes.py
backend/tests/unit/: test_database_service.py
backend/vibe_reviewer/: prompts.py  reviewer_service.py  schemas.py
docker/: README.md  docker-compose.yml  nginx.conf
docs/: DOCKER_DEPLOY.md
docs/plans/: 2026-07-21-organize-doc-assets.md  2026-07-21-testing-docs-organization-design.md  2026-07-21-testing-docs-organization.md
docs/testing/: README.md
frontend/: vitest.config.ts
frontend/coverage/: coverage-final.json  index.html  lcov.info
frontend/coverage/utils/: index.html  (+2 more)
(+185 files in other folders)
