[project]
name = "vibe-blog"
version = "0.1.0"
description = "VibeBlog - AI long-form blog generation agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
    "rich>=13.7.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=1.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "oss2>=2.18.0",
    "jieba>=0.42.1",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "langfuse>=3.0.0",
    "opentelemetry-instrumentation-threading>=0.48b0",
    "aiosqlite>=0.19.0",
    "croniter>=6.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-flask>=1.3.0",
    "pytest-xdist>=3.5.0",
]
